# Neotron-32-BIOS

./: .gitignore  Cargo.toml  README.md  build.rs  gdb.cfg  memory.x  neotron-32-bios.ld  neotron-32-bios.sublime-project  neotron-32-bios.x  openocd.cfg
.cargo/: config
.github/workflows/: rust.yml
src/: delay_spi.s  main.rs
