[package]
name = "neotro_32_bios"
version = "0.1.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
description = "BIOS for the Neotron-32"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neotron_common_bios = { git = "https://github.com/neotron-compute/neotron-common-bios" }

