[package]
name = "neotron-32-bios"
version = "0.1.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
description = "BIOS for the Neotron-32"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/neotron-compute/Neotron-32-BIOS"

[[bin]]
name = "neotron-32-bios"
test = false
bench = false

[profile.release]
lto = true
debug = true
codegen-units = 1
opt-level = "s"

[dependencies]
chrono = { version = "0.4", default-features=false }
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-hal = { version = "0.2", features = ["unproven"] }
embedded-sdmmc = "0.3"
mcp794xx = "0.2"
neotron-common-bios = { path = "./common" }
spin = "0.5"
tm4c123x-hal = { version = "0.10", features = ["rt"] }
vga-framebuffer = { version = "0.9.0", features = ["const_fn"] }
